[package]
name = "ha-desktop"
version = "1.0.0"
description = "Home Assistant Desktop — Multi-location controller"
authors = ["Biro Andreev d.o.o."]
edition = "2021"

[lib]
name = "ha_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ha-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2" }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
